# rustyfim

./: Cargo.toml  README.md  pgo.sh  pyproject.toml  rust-toolchain
.github/workflows/: CI.yml  continuous-integration.yml  release.yml
bench/: Cargo.toml  README.md
bench/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: fptree.rs  generate_rules.rs  item.rs  item_counter.rs  lib.rs
src/dciclosed/: closed.rs  itemset.rs  matrix.rs  mod.rs  parallel.rs  sequential.rs
src/dciclosed/tests/: datasets.rs  mod.rs
src/fp/: fptree.rs  item.rs  item_counter.rs  mod.rs  rule.rs
src/fpgrowth/: index.rs  item.rs
src/neclatclosed/: bitvector.rs  cpstorage.rs  itemset.rs  mod.rs
tests/data/: chess.dat.out
