[package]
name = "rustyfim"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustyfim"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.16.4", features = ["extension-module"] }
bitvec = { version = "0.19", optional = true }
bitmatrix = { version = "0.1", optional = true }
rayon = "1.5.2"
itertools = "0.6.1"
argparse = "*"
fnv = "1.0.6"
lazy_static = "1.4.0"
roaring = { version = "0.9.0", features = ["simd"] }

[features]
default = ["bitmatrix", "bitvec"]

[profile.release]
debug = true

[workspace]
members = ["bench"]
