[package]
name = "rustyfim"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustyfim"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = "0.16.4"
bitvec = "0.19"
bitmatrix = "0.1"
rayon = "1.5.2"
itertools = "0.6.1"
argparse = "*"
fnv = "1.0.6"
lazy_static = "1.4.0"
roaring = { version = "0.9.0", features = ["simd"] }

[build-dependencies]
pyo3-build-config = { version = "0.16.5", features = ["extension-module"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
debug = true

[workspace]
members = ["bench"]
